--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -10,13 +10,13 @@
     <h6><strong>Name</strong></h6><p>{{users_account_info.name}}</p> 
 </div>
 <div class="col-md-3">
-    <h6><strong>Date of Birth</strong></h6><p>{{users_account_info.dob}}</p>
+    <h6><strong>Date of Birth</strong></h6><p>{{users_account_info.date_of_birth}}</p>
 </div>
 <div class="col-md-3">
     <h6><strong>Hobby</strong></h6><p>{{users_account_info.hobby}}</p>
 </div>
 <div class="col-md-3">
-    <h6><strong>Favourite Movie</strong></h6><p>{{users_account_info.favourite_movie}}</p>
+    <h6><strong>Favourite Movie</strong></h6><p>{{users_account_info.favourite_moive}}</p>
 </div>
 
 
