--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <!--<script src="/static/js/scripts.js"></script>-->
 
-<script src="{{url_for('static', filename='js/jquery-3.5.1.min.js')}}"></script>
+<script src="{{url_for('static', filename='js/jquery.js')}}"></script>
 <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
 </body>
 </html>
