--- a/templates/additional_reg_info.html
+++ b/templates/additional_reg_info.html
@@ -14,15 +14,15 @@
                 </div>
                 <div class="form-group">
                     <label for="date_of_birth">Date Of birth</label>
-                    <input type="text" class="form-control" id="date_of_birth" name="date_of_birth">
+                    <input type="text" class="form-control" id="date_of_birth" name="date_of_birth" required>
                 </div>
                 <div class="form-group">
                     <label for="hobby">Hobby</label>
-                    <input type="text" class="form-control" id="hobby" name="hobby"/>
+                    <input type="text" class="form-control" id="hobby" name="hobby" required/>
                 </div>
                 <div class="form-group">
                     <label for="favourite_moive">Favourite Movie</label>
-                    <input type="text" class="form-control" id="favourite_moive" name="favourite_moive">
+                    <input type="text" class="form-control" id="favourite_moive" name="favourite_moive" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
