--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
     <form name="login_form" method="POST" action="{{url_for('login')}}">
     <div class="form-group">
       <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp"/>
+      <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp" required/>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password"/>
+      <input type="password" class="form-control" id="password" name="password" required/>
     </div>
       <button type="submit" class="btn btn-primary">Log In</button>
       
