--- a/templates/register.html
+++ b/templates/register.html
@@ -11,11 +11,11 @@
     <form method="POST" action="{{url_for('register')}}">
     <div class="form-group">
       <label for="Username">Username</label>
-      <input type="text" class="form-control" id="name" name="username" aria-describedby="emailHelp"/>
+      <input type="text" class="form-control" id="name" name="username" aria-describedby="emailHelp" required/>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password"/>
+      <input type="password" class="form-control" id="password" name="password" required/>
     </div>
         <p>Please provide additional inforamtion</p>
       <button type="submit" class="btn btn-primary btn-block">Next</button>
