--- a/templates/edit_user_info.html
+++ b/templates/edit_user_info.html
@@ -26,7 +26,7 @@
       <label for="favourite_moive">Favourite Movie</label>
       <input type="text" class="form-control" id="favourite_moive" name="favourite_moive" value="{{info.favourite_moive}}" required>
    </div>
-   <button type="submit" class="btn btn-primary btn-block">Submit</button>
+   <button type="submit" class="btn btn-primary btn-block">Update</button>
 </form>
 </div>
 	{% endblock %}
