--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container p-2 m-5">
 
-
+<h6>{{users_account_info._id}}</h6>
 <div class="row">
 
 <div class="col-md-3">
@@ -26,8 +26,8 @@
     <div class="col-md-12">
         <a href="{{ url_for('signout') }}" class="btn btn-primary m-2 p-2">Signout</a>
         <a href="{{url_for('edit_user_info', users_id=users_account_info._id)}}" class="btn btn-primary m-2 p-2">Edit-infomration</a>
+        <a href="{{url_for('delete_account', users_id=users_account_info._id)}}" class="btn btn-primary m-2 p-2">Delete information</a>
     </div>
 
 </div>
 {% endblock %}
- <!--   --> 
